frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shs-ingress
  namespace: shs
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
  - host: shs-client.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shs-client
            port:
              number: 3000
